# sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_client.py
vox8/: __init__.py  client.py
