[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vox8"
version = "0.1.0"
description = "Python SDK for vox8 real-time speech translation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "vox8", email = "support@vox8.com" }
]
keywords = [
    "vox8",
    "speech",
    "translation",
    "real-time",
    "voice",
    "websocket",
    "speech-to-speech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://vox8.com"
Documentation = "https://vox8.com/docs"
Repository = "https://github.com/vox8-io/sdk-python"
Issues = "https://github.com/vox8-io/sdk-python/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/vox8",
]

[tool.hatch.build.targets.wheel]
packages = ["vox8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
